tests/expectations/parser-statement/statement/console_fail.out
Error [EPAR0370020]: Unicode bidi override code point encountered.


Error [EPAR0370032]: `console` statements are not yet supported.
    --> test_1:1:1
     |
   1 | console.log(1);
     | ^^^^^^^
     |
     = Consider using `assert`, `assert_eq`, or `assert_neq` instead.


Error [EPAR0370032]: `console` statements are not yet supported.
    --> test_2:1:1
     |
   1 | console.test();
     | ^^^^^^^
     |
     = Consider using `assert`, `assert_eq`, or `assert_neq` instead.


Error [EPAR0370032]: `console` statements are not yet supported.
    --> test_3:1:1
     |
   1 | console.error("{}", x);
     | ^^^^^^^
     |
     = Consider using `assert`, `assert_eq`, or `assert_neq` instead.


Error [EPAR0370032]: `console` statements are not yet supported.
    --> test_4:1:1
     |
   1 | console.error("{}{}", x, y);
     | ^^^^^^^
     |
     = Consider using `assert`, `assert_eq`, or `assert_neq` instead.


Error [EPAR0370032]: `console` statements are not yet supported.
    --> test_5:1:1
     |
   1 | console.error("x");
     | ^^^^^^^
     |
     = Consider using `assert`, `assert_eq`, or `assert_neq` instead.


Error [EPAR0370032]: `console` statements are not yet supported.
    --> test_6:1:1
     |
   1 | console.assert(true);
     | ^^^^^^^
     |
     = Consider using `assert`, `assert_eq`, or `assert_neq` instead.


Error [EPAR0370032]: `console` statements are not yet supported.
    --> test_7:1:1
     |
   1 | console.assert_eq(1u32, 2u32);
     | ^^^^^^^
     |
     = Consider using `assert`, `assert_eq`, or `assert_neq` instead.


Error [EPAR0370032]: `console` statements are not yet supported.
    --> test_8:1:1
     |
   1 | console.assert_neq(true, false);
     | ^^^^^^^
     |
     = Consider using `assert`, `assert_eq`, or `assert_neq` instead.


Error [EPAR0370032]: `console` statements are not yet supported.
    --> test_9:1:1
     |
   1 | console.log("{}", x);
     | ^^^^^^^
     |
     = Consider using `assert`, `assert_eq`, or `assert_neq` instead.


Error [EPAR0370032]: `console` statements are not yet supported.
    --> test_10:1:1
     |
   1 | console.log("{}{}", x, y);
     | ^^^^^^^
     |
     = Consider using `assert`, `assert_eq`, or `assert_neq` instead.


Error [EPAR0370032]: `console` statements are not yet supported.
    --> test_11:1:1
     |
   1 | console.log("x");
     | ^^^^^^^
     |
     = Consider using `assert`, `assert_eq`, or `assert_neq` instead.


